--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:28.634099Z",
-     "start_time": "2024-04-19T06:40:25.858372Z"
+     "end_time": "2024-04-19T16:32:27.131708Z",
+     "start_time": "2024-04-19T16:32:23.602279Z"
     }
    },
    "cell_type": "code",
@@ -13,6 +13,7 @@
     "import warnings\n",
     "from typing import Tuple, Union\n",
     "\n",
+    "from datetime import datetime\n",
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
     "import tkinter as tk\n",
@@ -30,8 +31,45 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:29.722763Z",
-     "start_time": "2024-04-19T06:40:29.679667Z"
+     "end_time": "2024-04-19T16:32:27.147720Z",
+     "start_time": "2024-04-19T16:32:27.132794Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def add_elusive_equivalents(metrics: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Add the elusive metrics to the metrics DataFrame.\n",
+    "\n",
+    "    :param metrics: DataFrame containing the metrics.\n",
+    "    :return: DataFrame containing the metrics with the elusive metrics added.\n",
+    "    \"\"\"\n",
+    "    start_completeness = metrics.loc[metrics['Iteration'] == 0, 'Completeness'].values[0]\n",
+    "    if start_completeness > 0:\n",
+    "        for metric in [\"Completeness\", \"Accuracy\", \"Factual Accuracy\", \"Overall Accuracy\", \"Real Case Accuracy\",\n",
+    "                       \"Factual Case Accuracy\", \"Overall Case Accuracy\"]:\n",
+    "            start_metric = metrics.loc[metrics['Iteration'] == 0, metric].values[0]\n",
+    "            \n",
+    "            column_index = metrics.columns.get_loc(metric) + 1\n",
+    "            metrics.insert(column_index, f\"Elusive {metric}\", None)\n",
+    "\n",
+    "            for i in metrics.loc[metrics['Iteration'] > 0].index:\n",
+    "                iteration_metric = metrics.loc[i, metric]\n",
+    "                difference = iteration_metric - start_metric\n",
+    "                added_metric = (difference / (100 - start_metric)) * 100\n",
+    "                metrics.loc[i, f\"Elusive {metric}\"] = added_metric\n",
+    "\n",
+    "    return metrics\n"
+   ],
+   "id": "c6aa4d0c7936acb4",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-19T16:32:30.607632Z",
+     "start_time": "2024-04-19T16:32:30.577858Z"
     }
    },
    "cell_type": "code",
@@ -189,13 +227,13 @@
    ],
    "id": "150b7690c957beff",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:30.486387Z",
-     "start_time": "2024-04-19T06:40:30.470757Z"
+     "end_time": "2024-04-19T16:32:31.324773Z",
+     "start_time": "2024-04-19T16:32:31.293489Z"
     }
    },
    "cell_type": "code",
@@ -216,13 +254,13 @@
    ],
    "id": "1d1fbcc9e37b07b9",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:31.216195Z",
-     "start_time": "2024-04-19T06:40:31.184184Z"
+     "end_time": "2024-04-19T16:32:31.822082Z",
+     "start_time": "2024-04-19T16:32:31.791598Z"
     }
    },
    "cell_type": "code",
@@ -268,13 +306,13 @@
    ],
    "id": "15b37fa02ad6db9d",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:32.205071Z",
-     "start_time": "2024-04-19T06:40:32.173420Z"
+     "end_time": "2024-04-19T16:32:32.514241Z",
+     "start_time": "2024-04-19T16:32:32.500563Z"
     }
    },
    "cell_type": "code",
@@ -297,13 +335,13 @@
    ],
    "id": "d8d8f1a9cedfcf2d",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:32.960420Z",
-     "start_time": "2024-04-19T06:40:32.930967Z"
+     "end_time": "2024-04-19T16:32:33.114161Z",
+     "start_time": "2024-04-19T16:32:33.098085Z"
     }
    },
    "cell_type": "code",
@@ -342,17 +380,74 @@
     "\n",
     "        return complete_log, log_name, folder_path\n",
     "\n",
-    "    return pd.DataFrame(), \"\", \"\""
+    "    return pd.DataFrame(), \"\", \"\"\n"
    ],
    "id": "f635854ae114b1f4",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T06:40:46.555288Z",
-     "start_time": "2024-04-19T06:40:34.014240Z"
+     "end_time": "2024-04-19T16:32:33.745115Z",
+     "start_time": "2024-04-19T16:32:33.729339Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def print_metrics(metrics: pd.DataFrame) -> None:\n",
+    "    \"\"\"\n",
+    "    Print the evaluation metrics in a tabular format.\n",
+    "    \n",
+    "    :param metrics: DataFrame containing the evaluation metrics.\n",
+    "    \"\"\"\n",
+    "    num_columns = len(metrics.columns) - 1\n",
+    "    num_tables = (num_columns + 3) // 4\n",
+    "    \n",
+    "    for i in range(num_tables):\n",
+    "        start_idx = 1 + 4 * i\n",
+    "        end_idx = min(start_idx + 4, num_columns + 1)\n",
+    "        indices = [0] + list(range(start_idx, end_idx))\n",
+    "        metrics_table = metrics.iloc[:, indices]\n",
+    "        print(tabulate(metrics_table, headers='keys', tablefmt='grid', showindex=False))\n"
+   ],
+   "id": "57f4364067a174a4",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-19T16:32:34.338510Z",
+     "start_time": "2024-04-19T16:32:34.329077Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def save_metrics(metrics: pd.DataFrame, log_name: str) -> None:\n",
+    "    \"\"\"\n",
+    "    Save evaluation metrics to a CSV file.\n",
+    "    \n",
+    "    :param metrics: DataFrame containing evaluation metrics.\n",
+    "    :param log_name: Name of the log file.\n",
+    "    \"\"\"\n",
+    "    folder_name = f\"evaluation/{log_name}\"\n",
+    "    os.makedirs(folder_name, exist_ok=True)\n",
+    "\n",
+    "    current_time = datetime.utcnow().strftime('%Y%m%d_%H%M%S')\n",
+    "\n",
+    "    file_name = f'metrics_{current_time}.csv'\n",
+    "    metrics.to_csv(os.path.join(folder_name, file_name), index=False)\n"
+   ],
+   "id": "2b88746e93f1974d",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-19T16:32:58.123714Z",
+     "start_time": "2024-04-19T16:32:35.091483Z"
     }
    },
    "cell_type": "code",
@@ -361,8 +456,10 @@
     "\n",
     "if folder_path:\n",
     "    metrics = evaluate_repaired_logs(folder_path, log_name, complete_log)\n",
+    "    metrics = add_elusive_equivalents(metrics)\n",
     "    metrics = format_metrics(metrics)\n",
-    "    print(tabulate(metrics, headers='keys', tablefmt='grid', showindex=False))"
+    "    save_metrics(metrics, log_name)\n",
+    "    print_metrics(metrics)\n"
    ],
    "id": "8364b4c7b44adda0",
    "outputs": [
@@ -372,19 +469,46 @@
      "text": [
       "CSV file successfully read.\n",
       "Folder path successfully read.\n",
-      "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
-      "|   Iteration | Completeness   | Accuracy   | Factual Accuracy   | Overall Accuracy   | Real Case Accuracy   | Factual Case Accuracy   | Overall Case Accuracy   |\n",
-      "+=============+================+============+====================+====================+======================+=========================+=========================+\n",
-      "|           0 | 80.95%         | 80.95%     | 0.00%              | 80.95%             | 33.33%               | 0.00%                   | 33.33%                  |\n",
-      "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
-      "|           1 | 97.62%         | 83.33%     | 0.00%              | 83.33%             | 33.33%               | 0.00%                   | 33.33%                  |\n",
-      "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n",
-      "|           2 | 97.62%         | 80.95%     | 0.00%              | 80.95%             | 16.67%               | 0.00%                   | 16.67%                  |\n",
-      "+-------------+----------------+------------+--------------------+--------------------+----------------------+-------------------------+-------------------------+\n"
+      "+-------------+----------------+------------------------+------------+--------------------+\n",
+      "|   Iteration | Completeness   | Elusive Completeness   | Accuracy   | Elusive Accuracy   |\n",
+      "+=============+================+========================+============+====================+\n",
+      "|           0 | 80.95%         |                        | 80.95%     |                    |\n",
+      "+-------------+----------------+------------------------+------------+--------------------+\n",
+      "|           1 | 97.62%         | 87.50%                 | 83.33%     | 12.50%             |\n",
+      "+-------------+----------------+------------------------+------------+--------------------+\n",
+      "|           2 | 97.62%         | 87.50%                 | 80.95%     | 0.00%              |\n",
+      "+-------------+----------------+------------------------+------------+--------------------+\n",
+      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
+      "|   Iteration | Factual Accuracy   | Elusive Factual Accuracy   | Overall Accuracy   | Elusive Overall Accuracy   |\n",
+      "+=============+====================+============================+====================+============================+\n",
+      "|           0 | 0.00%              |                            | 80.95%             |                            |\n",
+      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
+      "|           1 | 0.00%              | 0.00%                      | 83.33%             | 12.50%                     |\n",
+      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
+      "|           2 | 0.00%              | 0.00%                      | 80.95%             | 0.00%                      |\n",
+      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
+      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
+      "|   Iteration | Real Case Accuracy   | Elusive Real Case Accuracy   | Factual Case Accuracy   | Elusive Factual Case Accuracy   |\n",
+      "+=============+======================+==============================+=========================+=================================+\n",
+      "|           0 | 33.33%               |                              | 0.00%                   |                                 |\n",
+      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
+      "|           1 | 33.33%               | 0.00%                        | 0.00%                   | 0.00%                           |\n",
+      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
+      "|           2 | 16.67%               | -25.00%                      | 0.00%                   | 0.00%                           |\n",
+      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
+      "+-------------+-------------------------+---------------------------------+\n",
+      "|   Iteration | Overall Case Accuracy   | Elusive Overall Case Accuracy   |\n",
+      "+=============+=========================+=================================+\n",
+      "|           0 | 33.33%                  |                                 |\n",
+      "+-------------+-------------------------+---------------------------------+\n",
+      "|           1 | 33.33%                  | 0.00%                           |\n",
+      "+-------------+-------------------------+---------------------------------+\n",
+      "|           2 | 16.67%                  | -25.00%                         |\n",
+      "+-------------+-------------------------+---------------------------------+\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 10
   }
  ],
  "metadata": {
