--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:27.131708Z",
-     "start_time": "2024-04-19T16:32:23.602279Z"
+     "end_time": "2024-04-19T16:39:39.912554Z",
+     "start_time": "2024-04-19T16:39:34.572827Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:27.147720Z",
-     "start_time": "2024-04-19T16:32:27.132794Z"
+     "end_time": "2024-04-19T16:39:39.944750Z",
+     "start_time": "2024-04-19T16:39:39.918708Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
     "            start_metric = metrics.loc[metrics['Iteration'] == 0, metric].values[0]\n",
     "            \n",
     "            column_index = metrics.columns.get_loc(metric) + 1\n",
-    "            metrics.insert(column_index, f\"Elusive {metric}\", None)\n",
+    "            metrics.insert(column_index, f\"Elus. {metric}\", None)\n",
     "\n",
     "            for i in metrics.loc[metrics['Iteration'] > 0].index:\n",
     "                iteration_metric = metrics.loc[i, metric]\n",
     "                difference = iteration_metric - start_metric\n",
     "                added_metric = (difference / (100 - start_metric)) * 100\n",
-    "                metrics.loc[i, f\"Elusive {metric}\"] = added_metric\n",
+    "                metrics.loc[i, f\"Elus. {metric}\"] = added_metric\n",
     "\n",
     "    return metrics\n"
    ],
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:30.607632Z",
-     "start_time": "2024-04-19T16:32:30.577858Z"
+     "end_time": "2024-04-19T16:39:39.991898Z",
+     "start_time": "2024-04-19T16:39:39.945698Z"
     }
    },
    "cell_type": "code",
@@ -232,8 +232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:31.324773Z",
-     "start_time": "2024-04-19T16:32:31.293489Z"
+     "end_time": "2024-04-19T16:39:40.023561Z",
+     "start_time": "2024-04-19T16:39:39.998464Z"
     }
    },
    "cell_type": "code",
@@ -259,8 +259,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:31.822082Z",
-     "start_time": "2024-04-19T16:32:31.791598Z"
+     "end_time": "2024-04-19T16:39:40.055097Z",
+     "start_time": "2024-04-19T16:39:40.023561Z"
     }
    },
    "cell_type": "code",
@@ -311,8 +311,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:32.514241Z",
-     "start_time": "2024-04-19T16:32:32.500563Z"
+     "end_time": "2024-04-19T16:39:40.086671Z",
+     "start_time": "2024-04-19T16:39:40.060381Z"
     }
    },
    "cell_type": "code",
@@ -340,8 +340,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:33.114161Z",
-     "start_time": "2024-04-19T16:32:33.098085Z"
+     "end_time": "2024-04-19T16:39:40.102417Z",
+     "start_time": "2024-04-19T16:39:40.089683Z"
     }
    },
    "cell_type": "code",
@@ -389,8 +389,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:33.745115Z",
-     "start_time": "2024-04-19T16:32:33.729339Z"
+     "end_time": "2024-04-19T16:39:40.118484Z",
+     "start_time": "2024-04-19T16:39:40.102417Z"
     }
    },
    "cell_type": "code",
@@ -418,8 +418,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:34.338510Z",
-     "start_time": "2024-04-19T16:32:34.329077Z"
+     "end_time": "2024-04-19T16:39:40.134237Z",
+     "start_time": "2024-04-19T16:39:40.119218Z"
     }
    },
    "cell_type": "code",
@@ -446,8 +446,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T16:32:58.123714Z",
-     "start_time": "2024-04-19T16:32:35.091483Z"
+     "end_time": "2024-04-19T16:39:57.981277Z",
+     "start_time": "2024-04-19T16:39:40.134237Z"
     }
    },
    "cell_type": "code",
@@ -469,42 +469,42 @@
      "text": [
       "CSV file successfully read.\n",
       "Folder path successfully read.\n",
-      "+-------------+----------------+------------------------+------------+--------------------+\n",
-      "|   Iteration | Completeness   | Elusive Completeness   | Accuracy   | Elusive Accuracy   |\n",
-      "+=============+================+========================+============+====================+\n",
-      "|           0 | 80.95%         |                        | 80.95%     |                    |\n",
-      "+-------------+----------------+------------------------+------------+--------------------+\n",
-      "|           1 | 97.62%         | 87.50%                 | 83.33%     | 12.50%             |\n",
-      "+-------------+----------------+------------------------+------------+--------------------+\n",
-      "|           2 | 97.62%         | 87.50%                 | 80.95%     | 0.00%              |\n",
-      "+-------------+----------------+------------------------+------------+--------------------+\n",
-      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
-      "|   Iteration | Factual Accuracy   | Elusive Factual Accuracy   | Overall Accuracy   | Elusive Overall Accuracy   |\n",
-      "+=============+====================+============================+====================+============================+\n",
-      "|           0 | 0.00%              |                            | 80.95%             |                            |\n",
-      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
-      "|           1 | 0.00%              | 0.00%                      | 83.33%             | 12.50%                     |\n",
-      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
-      "|           2 | 0.00%              | 0.00%                      | 80.95%             | 0.00%                      |\n",
-      "+-------------+--------------------+----------------------------+--------------------+----------------------------+\n",
-      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
-      "|   Iteration | Real Case Accuracy   | Elusive Real Case Accuracy   | Factual Case Accuracy   | Elusive Factual Case Accuracy   |\n",
-      "+=============+======================+==============================+=========================+=================================+\n",
-      "|           0 | 33.33%               |                              | 0.00%                   |                                 |\n",
-      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
-      "|           1 | 33.33%               | 0.00%                        | 0.00%                   | 0.00%                           |\n",
-      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
-      "|           2 | 16.67%               | -25.00%                      | 0.00%                   | 0.00%                           |\n",
-      "+-------------+----------------------+------------------------------+-------------------------+---------------------------------+\n",
-      "+-------------+-------------------------+---------------------------------+\n",
-      "|   Iteration | Overall Case Accuracy   | Elusive Overall Case Accuracy   |\n",
-      "+=============+=========================+=================================+\n",
-      "|           0 | 33.33%                  |                                 |\n",
-      "+-------------+-------------------------+---------------------------------+\n",
-      "|           1 | 33.33%                  | 0.00%                           |\n",
-      "+-------------+-------------------------+---------------------------------+\n",
-      "|           2 | 16.67%                  | -25.00%                         |\n",
-      "+-------------+-------------------------+---------------------------------+\n"
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|   Iteration | Completeness   | Elus. Completeness   | Accuracy   | Elus. Accuracy   |\n",
+      "+=============+================+======================+============+==================+\n",
+      "|           0 | 80.95%         |                      | 80.95%     |                  |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           1 | 97.62%         | 87.50%               | 83.33%     | 12.50%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           2 | 97.62%         | 87.50%               | 80.95%     | 0.00%            |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|   Iteration | Factual Accuracy   | Elus. Factual Accuracy   | Overall Accuracy   | Elus. Overall Accuracy   |\n",
+      "+=============+====================+==========================+====================+==========================+\n",
+      "|           0 | 0.00%              |                          | 80.95%             |                          |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|           1 | 0.00%              | 0.00%                    | 83.33%             | 12.50%                   |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|           2 | 0.00%              | 0.00%                    | 80.95%             | 0.00%                    |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "+-------------+----------------------+----------------------------+-------------------------+-------------------------------+\n",
+      "|   Iteration | Real Case Accuracy   | Elus. Real Case Accuracy   | Factual Case Accuracy   | Elus. Factual Case Accuracy   |\n",
+      "+=============+======================+============================+=========================+===============================+\n",
+      "|           0 | 33.33%               |                            | 0.00%                   |                               |\n",
+      "+-------------+----------------------+----------------------------+-------------------------+-------------------------------+\n",
+      "|           1 | 33.33%               | 0.00%                      | 0.00%                   | 0.00%                         |\n",
+      "+-------------+----------------------+----------------------------+-------------------------+-------------------------------+\n",
+      "|           2 | 16.67%               | -25.00%                    | 0.00%                   | 0.00%                         |\n",
+      "+-------------+----------------------+----------------------------+-------------------------+-------------------------------+\n",
+      "+-------------+-------------------------+-------------------------------+\n",
+      "|   Iteration | Overall Case Accuracy   | Elus. Overall Case Accuracy   |\n",
+      "+=============+=========================+===============================+\n",
+      "|           0 | 33.33%                  |                               |\n",
+      "+-------------+-------------------------+-------------------------------+\n",
+      "|           1 | 33.33%                  | 0.00%                         |\n",
+      "+-------------+-------------------------+-------------------------------+\n",
+      "|           2 | 16.67%                  | -25.00%                       |\n",
+      "+-------------+-------------------------+-------------------------------+\n"
      ]
     }
    ],
