--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -295,12 +295,12 @@
     "                        iteration_metrics = {\"Iteration\": 0, \"Completeness\": completeness}\n",
     "                        accuracy = evaluate_accuracy(predicted_log, complete_log, 'Original Case ID')\n",
     "                        iteration_metrics.update(accuracy)\n",
-    "                        quality_metrics = quality_metrics.append(iteration_metrics, ignore_index=True)\n",
+    "                        quality_metrics = pd.DataFrame([iteration_metrics])\n",
     "                    completeness = evaluate_completeness(predicted_log)\n",
     "                    iteration_metrics = {\"Iteration\": i, \"Completeness\": completeness}\n",
     "                    accuracy = evaluate_accuracy(predicted_log, complete_log)\n",
     "                    iteration_metrics.update(accuracy)\n",
-    "                    quality_metrics = quality_metrics.append(iteration_metrics, ignore_index=True)\n",
+    "                    quality_metrics = pd.concat([quality_metrics, pd.DataFrame([iteration_metrics])], ignore_index=True)\n",
     "\n",
     "    return quality_metrics\n"
    ],
