--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:51.194896Z",
-     "start_time": "2024-05-06T17:38:48.335179Z"
+     "end_time": "2024-05-07T08:57:13.797567Z",
+     "start_time": "2024-05-07T08:57:08.715614Z"
     }
    },
    "cell_type": "code",
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:51.811962Z",
-     "start_time": "2024-05-06T17:38:51.796332Z"
+     "end_time": "2024-05-07T08:57:17.353008Z",
+     "start_time": "2024-05-07T08:57:17.322400Z"
     }
    },
    "cell_type": "code",
@@ -76,8 +76,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:52.184363Z",
-     "start_time": "2024-05-06T17:38:52.153382Z"
+     "end_time": "2024-05-07T08:57:17.941489Z",
+     "start_time": "2024-05-07T08:57:17.909669Z"
     }
    },
    "cell_type": "code",
@@ -239,8 +239,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:52.541529Z",
-     "start_time": "2024-05-06T17:38:52.526009Z"
+     "end_time": "2024-05-07T08:57:18.451750Z",
+     "start_time": "2024-05-07T08:57:18.427214Z"
     }
    },
    "cell_type": "code",
@@ -266,8 +266,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:52.841976Z",
-     "start_time": "2024-05-06T17:38:52.813126Z"
+     "end_time": "2024-05-07T08:57:19.295311Z",
+     "start_time": "2024-05-07T08:57:19.251427Z"
     }
    },
    "cell_type": "code",
@@ -406,8 +406,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:53.196611Z",
-     "start_time": "2024-05-06T17:38:53.180904Z"
+     "end_time": "2024-05-07T08:58:19.095552Z",
+     "start_time": "2024-05-07T08:58:19.080514Z"
     }
    },
    "cell_type": "code",
@@ -439,8 +439,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:53.429406Z",
-     "start_time": "2024-05-06T17:38:53.413770Z"
+     "end_time": "2024-05-07T08:58:19.679608Z",
+     "start_time": "2024-05-07T08:58:19.663753Z"
     }
    },
    "cell_type": "code",
@@ -468,8 +468,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:53.649878Z",
-     "start_time": "2024-05-06T17:38:53.633225Z"
+     "end_time": "2024-05-07T08:58:20.186359Z",
+     "start_time": "2024-05-07T08:58:20.155030Z"
     }
    },
    "cell_type": "code",
@@ -508,7 +508,9 @@
     "                        iteration_metrics = evaluate_iteration(0, predicted_log, complete_log, configuration,\n",
     "                                                               'Original Case ID')\n",
     "                        quality_metrics = pd.DataFrame([iteration_metrics])\n",
-    "                        elusive_log = predicted_log[['Original Case ID', 'Activity']]\n",
+    "                        columns_to_exclude = {'Determined Case ID', 'Iteration Probability',\n",
+    "                                              'Determination Probability', 'Determination Follow-up Probability'}\n",
+    "                        elusive_log = predicted_log.drop(columns=columns_to_exclude.intersection(predicted_log.columns))\n",
     "                    iteration_metrics = evaluate_iteration(i, predicted_log, complete_log, configuration)\n",
     "                    quality_metrics = pd.concat([quality_metrics, pd.DataFrame([iteration_metrics])], ignore_index=True)\n",
     "      \n",
@@ -523,8 +525,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:53.822950Z",
-     "start_time": "2024-05-06T17:38:53.808938Z"
+     "end_time": "2024-05-07T08:58:20.834342Z",
+     "start_time": "2024-05-07T08:58:20.806697Z"
     }
    },
    "cell_type": "code",
@@ -565,8 +567,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:54.053603Z",
-     "start_time": "2024-05-06T17:38:54.037946Z"
+     "end_time": "2024-05-07T08:58:21.362148Z",
+     "start_time": "2024-05-07T08:58:21.347698Z"
     }
    },
    "cell_type": "code",
@@ -594,8 +596,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:54.336280Z",
-     "start_time": "2024-05-06T17:38:54.307074Z"
+     "end_time": "2024-05-07T08:58:21.833854Z",
+     "start_time": "2024-05-07T08:58:21.803409Z"
     }
    },
    "cell_type": "code",
@@ -667,8 +669,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:54.598637Z",
-     "start_time": "2024-05-06T17:38:54.580830Z"
+     "end_time": "2024-05-07T08:58:22.297546Z",
+     "start_time": "2024-05-07T08:58:22.266298Z"
     }
    },
    "cell_type": "code",
@@ -696,20 +698,56 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:54.868090Z",
-     "start_time": "2024-05-06T17:38:54.852315Z"
+     "end_time": "2024-05-07T08:58:22.860678Z",
+     "start_time": "2024-05-07T08:58:22.829429Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def randomize_missing_case_ids(elusive_log: pd.DataFrame, tokenizer: Tokenizer) -> pd.DataFrame:\n",
+    "def process_metrics(metrics: pd.DataFrame, log_name: str, model_name: str = 'transformer', \n",
+    "                    log: pd.DataFrame = pd. DataFrame()) -> None:\n",
+    "    \"\"\"\n",
+    "    Process the evaluation metrics and save them to a CSV file.\n",
+    "    \n",
+    "    :param metrics: DataFrame containing the evaluation metrics.\n",
+    "    :param log_name: Name of the log file.\n",
+    "    :param model_name: Name of the model used for evaluation. Default is 'transformer'.\n",
+    "    :param log: DataFrame containing the log. Default is an empty DataFrame.\n",
+    "    \"\"\"\n",
+    "    metrics = add_elusive_equivalents(metrics)\n",
+    "    metrics = format_metrics(metrics)\n",
+    "    save_metrics(metrics, log_name, model_name, log)\n",
+    "    print(\"\\n=== \" + model_name.upper() + \" ===\\n\")\n",
+    "    print_metrics(metrics)\n"
+   ],
+   "id": "8b640d1990ea4e97",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-07T09:05:03.427635Z",
+     "start_time": "2024-05-07T09:05:03.412020Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def randomize_missing_case_ids(elusive_log: pd.DataFrame, tokenizer: Tokenizer, log_name: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Randomize the missing Case ID values in the elusive log.\n",
     "    \n",
     "    :param elusive_log: Log containing missing Case ID values.\n",
     "    :param tokenizer: Tokenizer object used to generate random case IDs.\n",
+    "    :param log_name: Name of the log file.\n",
     "    :return: Log with missing Case ID values randomized.\n",
     "    \"\"\"\n",
+    "    randomized_file = f\"evaluation/{log_name}/randomized/randomized_{log_name}.csv\"\n",
+    "    \n",
+    "    if os.path.exists(randomized_file) and os.path.getsize(randomized_file) > 0:\n",
+    "        print(\"Randomized log successfully read.\")\n",
+    "        return pd.read_csv(randomized_file)\n",
+    "    \n",
     "    elusive_log['Determined Case ID'] = elusive_log['Original Case ID']\n",
     "    missing_indices = elusive_log['Determined Case ID'].isna()\n",
     "    \n",
@@ -729,30 +767,31 @@
     "        \n",
     "        elusive_log.loc[missing_indices, 'Determined Case ID'] = random_tokens\n",
     "        \n",
+    "        print(\"Randomized missing Case ID values.\")\n",
+    "        \n",
     "    return elusive_log\n"
    ],
    "id": "14840cf9ee8f2eb8",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:38:55.397103Z",
-     "start_time": "2024-05-06T17:38:55.381008Z"
+     "end_time": "2024-05-07T08:58:24.329133Z",
+     "start_time": "2024-05-07T08:58:24.315621Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def save_metrics(metrics: pd.DataFrame, log_name: str, model_name: str = 'transformer',\n",
-    "                 log: pd.DataFrame = pd.DataFrame()) -> None:\n",
+    "def save_metrics(metrics: pd.DataFrame, log_name: str, model_name: str, log: pd.DataFrame) -> None:\n",
     "    \"\"\"\n",
     "    Save evaluation metrics to a CSV file and save the log to a CSV file if applicable.\n",
     "    \n",
     "    :param metrics: DataFrame containing evaluation metrics.\n",
     "    :param log_name: Name of the log file.\n",
-    "    :param model_name: Name of the model used for evaluation. Default is 'transformer'.\n",
-    "    :param log: DataFrame containing the log. Default is an empty DataFrame.\n",
+    "    :param model_name: Name of the model used for evaluation.\n",
+    "    :param log: DataFrame containing the log.\n",
     "    \"\"\"\n",
     "    folder_name = f\"evaluation/{log_name}/{model_name}\"\n",
     "    os.makedirs(folder_name, exist_ok=True)\n",
@@ -768,13 +807,13 @@
    ],
    "id": "2b88746e93f1974d",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-06T17:39:22.901565Z",
-     "start_time": "2024-05-06T17:38:55.902393Z"
+     "end_time": "2024-05-07T09:05:20.549462Z",
+     "start_time": "2024-05-07T09:05:06.592961Z"
     }
    },
    "cell_type": "code",
@@ -783,19 +822,11 @@
     "\n",
     "if folder_path:\n",
     "    metrics, elusive_log = evaluate_repaired_logs(folder_path, log_name, complete_log, model_configuration)\n",
-    "    random_log = randomize_missing_case_ids(elusive_log, tokenizer)\n",
+    "    random_log = randomize_missing_case_ids(elusive_log, tokenizer, log_name)\n",
     "    random_metrics = evaluate_random_log(metrics, random_log, complete_log, model_configuration)\n",
     "    random_metrics = format_consistency_metrics(random_metrics, model_configuration)\n",
-    "    metrics = add_elusive_equivalents(metrics)\n",
-    "    random_metrics = add_elusive_equivalents(random_metrics)\n",
-    "    metrics = format_metrics(metrics)\n",
-    "    random_metrics = format_metrics(random_metrics)\n",
-    "    save_metrics(metrics, log_name)\n",
-    "    save_metrics(random_metrics, log_name, 'randomized', random_log)\n",
-    "    print(\"\\n=== TRANSFORMER ===\\n\")\n",
-    "    print_metrics(metrics)\n",
-    "    print(\"\\n=== RANDOMIZED ===\\n\")\n",
-    "    print_metrics(random_metrics)\n"
+    "    process_metrics(metrics, log_name)\n",
+    "    process_metrics(random_metrics, log_name, 'randomized', random_log)\n"
    ],
    "id": "8364b4c7b44adda0",
    "outputs": [
@@ -807,6 +838,7 @@
       "Folder path successfully read.\n",
       "Model configuration file successfully read.\n",
       "Tokenizer successfully read.\n",
+      "Randomized missing Case ID values.\n",
       "\n",
       "=== TRANSFORMER ===\n",
       "\n",
@@ -884,19 +916,19 @@
       "+=============+======================+=========================+=========================+=======================+\n",
       "|           0 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
       "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
-      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 50.00%                |\n",
+      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 54.55%                |\n",
       "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
       "+-------------+-----------------------+\n",
       "|   Iteration | End Ac. Consistency   |\n",
       "+=============+=======================+\n",
       "|           0 | 83.33%                |\n",
       "+-------------+-----------------------+\n",
-      "|           1 | 50.00%                |\n",
+      "|           1 | 54.55%                |\n",
       "+-------------+-----------------------+\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 25
   }
  ],
  "metadata": {
